# fastapi-prompt-webhook

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  helpers.py  main.py  models.py
app/routers/: webhook_router.py
